Creacion del formulario

--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
             </section>
         <!-- Fin de la sección 3 actividades  -->
 
+        <section id="contacto-form">
+            <h2>Formulario de Contacto</h2>
+            <form> <input type="text" name="nombre" placeholder="Tu Nombre"> <input type="text" name="razon"
+                    placeholder="Razón para Contactar"> <input type="email" name="correo" placeholder="Tu Correo Electrónico">
+                <button type="submit">Enviar</button> </form>
+        </section>
+
         </div>
     </main>
 </body>
